K8s-files/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: exam
  labels:
    app: exam-database
spec:
  serviceName: "database-service"
  replicas: 1
  selector:
    matchLabels:
      app: exam-database
  template:
    metadata:
      labels:
        app: exam-database
    spec:
      containers:
      - name: mssql
        image: hub.mil.am/mssql/server:24.01.2023
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: exam-data
          mountPath: /var/opt/mssql/data
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "4096Mi"
            cpu: "1000m"
      imagePullSecrets:
      - name: local
  volumeClaimTemplates:
  - metadata:
      name: exam-data
      namespace: exam
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 2Gi

        
        
---

apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: exam
  labels:
    app: exam-database
spec:
  selector:
    app: exam-database
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433



---
