K8s-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exam
  namespace: exam
  labels:
    app: exam
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer
    kubernetes.io/tls-acme: "false"
    cert-manager.io/common-name: "exam.mil.am"
      #cert-manager.io/duration: 8760h
      # cert-manager.io/renew-before: 720h
      #cert-manager.io/usages: "server auth"
      #cert-manager.io/private-key-algorithm: "RSA"
      # cert-manager.io/private-key-rotation-policy: "Always"
    traefik.ingress.kubernetes.io/router.entrypoints: secureweb
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  ingressClassName: traefik-external
  rules:
  - host: exam.mil.am
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: api-exam.mil.am
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
  tls:
  - hosts:
    - "exam.mil.am"
    - "api-exam.mil.am"
    secretName: exam-secret
